@@ -11,6 +11,7 @@ import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandContext;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
+import io.stargate.sgv2.jsonapi.api.request.DataApiRequestInfo;
 import io.stargate.sgv2.jsonapi.config.DatabaseLimitsConfig;
 import io.stargate.sgv2.jsonapi.exception.ErrorCode;
 import io.stargate.sgv2.jsonapi.exception.JsonApiException;
@@ -26,7 +27,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -103,11 +103,12 @@ public record CreateCollectionOperation(
   }
 
   @Override
-  public Uni<Supplier<CommandResult>> execute(QueryExecutor queryExecutor) {
+  public Uni<Supplier<CommandResult>> execute(
+      DataApiRequestInfo dataApiRequestInfo, QueryExecutor queryExecutor) {
     logger.info("Executing CreateCollectionOperation for {}", name);
     // validate Data API collection limit guardrail and get tableMetadata
     Map<CqlIdentifier, KeyspaceMetadata> allKeyspaces =
-        cqlSessionCache.getSession().getMetadata().getKeyspaces();
+        cqlSessionCache.getSession(dataApiRequestInfo).getMetadata().getKeyspaces();
     KeyspaceMetadata currKeyspace =
         allKeyspaces.get(CqlIdentifier.fromInternal(commandContext.namespace()));
     if (currKeyspace == null) {
@@ -122,7 +123,7 @@ public record CreateCollectionOperation(
 
     // if table doesn't exist, continue to create collection
     if (table == null) {
-      return executeCollectionCreation(queryExecutor, false);
+      return executeCollectionCreation(dataApiRequestInfo, queryExecutor, false);
     }
     // if table exists, compare existedCollectionSettings and newCollectionSettings
     CollectionSettings existedCollectionSettings =
@@ -139,7 +140,7 @@ public record CreateCollectionOperation(
     // (1) trying to create with same options -> ok, proceed
     // (2) trying to create with different options -> error out
     if (existedCollectionSettings.equals(newCollectionSettings)) {
-      return executeCollectionCreation(queryExecutor, true);
+      return executeCollectionCreation(dataApiRequestInfo, queryExecutor, true);
     }
     return Uni.createFrom()
         .failure(
@@ -151,14 +152,18 @@ public record CreateCollectionOperation(
   /**
    * execute collection creation and indexes creation
    *
-   * @param queryExecutor
-   * @param collectionExisted
-   * @return
+   * @param dataApiRequestInfo DataApiRequestInfo
+   * @param queryExecutor QueryExecutor instance
+   * @param collectionExisted boolean that says if collection existed before
+   * @return Uni<Supplier<CommandResult>>
    */
   private Uni<Supplier<CommandResult>> executeCollectionCreation(
-      QueryExecutor queryExecutor, boolean collectionExisted) {
+      DataApiRequestInfo dataApiRequestInfo,
+      QueryExecutor queryExecutor,
+      boolean collectionExisted) {
     final Uni<AsyncResultSet> execute =
-        queryExecutor.executeCreateSchemaChange(getCreateTable(commandContext.namespace(), name));
+        queryExecutor.executeCreateSchemaChange(
+            dataApiRequestInfo, getCreateTable(commandContext.namespace(), name));
     final Uni<Boolean> indexResult =
         execute
             .onItem()
@@ -173,7 +178,10 @@ public record CreateCollectionOperation(
                     return Multi.createFrom()
                         .items(indexStatements.stream())
                         .onItem()
-                        .transformToUni(queryExecutor::executeCreateSchemaChange)
+                        .transformToUni(
+                            indexStatement ->
+                                queryExecutor.executeCreateSchemaChange(
+                                    dataApiRequestInfo, indexStatement))
                         .concatenate()
                         .collect()
                         .asList()
@@ -215,7 +223,7 @@ public record CreateCollectionOperation(
               // if index creation violates DB index limit and collection not existed before,
               // and rollback is enabled, then drop the collection
               if (!collectionExisted && tooManyIndexesRollbackEnabled) {
-                return cleanUpCollectionFailedWithTooManyIndex(queryExecutor);
+                return cleanUpCollectionFailedWithTooManyIndex(dataApiRequestInfo, queryExecutor);
               }
               // if index creation violates DB index limit and collection existed before,
               // will not drop the collection
@@ -229,11 +237,11 @@ public record CreateCollectionOperation(
   }
 
   public Uni<JsonApiException> cleanUpCollectionFailedWithTooManyIndex(
-      QueryExecutor queryExecutor) {
+      DataApiRequestInfo dataApiRequestInfo, QueryExecutor queryExecutor) {
     DeleteCollectionOperation deleteCollectionOperation =
         new DeleteCollectionOperation(commandContext, name);
     return deleteCollectionOperation
-        .execute(queryExecutor)
+        .execute(dataApiRequestInfo, queryExecutor)
         .onItem()
         .transform(
             res ->
@@ -273,7 +281,7 @@ public record CreateCollectionOperation(
         allKeyspaces.values().stream()
             .map(keyspace -> keyspace.getTables().values())
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     final long collectionCount = allTables.stream().filter(COLLECTION_MATCHER).count();
     final int MAX_COLLECTIONS = dbLimitsConfig.maxCollections();
     if (collectionCount >= MAX_COLLECTIONS) {
@@ -297,7 +305,7 @@ public record CreateCollectionOperation(
     return null;
   }
 
-  protected SimpleStatement getCreateTable(String keyspace, String table) {
+  public SimpleStatement getCreateTable(String keyspace, String table) {
     if (vectorSearch) {
       String createTableWithVector =
           "CREATE TABLE IF NOT EXISTS \"%s\".\"%s\" ("
@@ -342,7 +350,7 @@ public record CreateCollectionOperation(
     }
   }
 
-  protected List<SimpleStatement> getIndexStatements(String keyspace, String table) {
+  public List<SimpleStatement> getIndexStatements(String keyspace, String table) {
     List<SimpleStatement> statements = new ArrayList<>(10);
     if (!indexingDenyAll()) {
       String existKeys =
